# Shpagin-OOP

./: .gitignore  Company.cpp  Company.h  Developer.cpp  Developer.h  Employee.cpp  Employee.h  Menu.cpp  Menu.h  Shpagin OOP.sln  Shpagin OOP.vcxproj  Shpagin OOP.vcxproj.filters  Source.cpp  Utils.cpp  Utils.h  pch.h
CSharp/: Company.cs  Developer.cs  Employee.cs  Menu.cs  Program.cs  Utils.cs
CSharpWithForms/: CSharpWithForms.csproj  Company.cs  Developer.cs  EditForm.Designer.cs  EditForm.cs  Employee.cs  MainForm.Designer.cs  MainForm.cs  MainForm.resx  Program.cs
CSharpWithForms/Properties/: Resources.Designer.cs
Qt/: CMakeLists.txt  company.cpp  company.h  developer.cpp  developer.h  employee.cpp  employee.h  main.cpp  pch.h  shpagindialog.cpp  shpagindialog.h  shpagindialog.ui  shpaginwidget.cpp  shpaginwidget.h  shpaginwindow.cpp  shpaginwindow.h  shpaginwindow.ui
ShpaginDLL/: Company.h  Developer.h  Employee.h  ShpaginDLL.vcxproj  ShpaginDLL.vcxproj.filters  dllmain.cpp  pch.h
